Bug 280931 - drag&drop menu is not translated
Summary: drag&drop menu is not translated
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-28 14:34 UTC by Alexander Potashev
Modified: 2011-08-29 01:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
menu (8.55 KB, image/png)
2011-08-28 14:34 UTC, Alexander Potashev
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2011-08-28 14:34:14 UTC
Created attachment 63190 [details]
menu

Version:           unspecified (using Devel) 
OS:                Linux

Menu items in the drag'n'drop popup menu are not translated, even though they are translated in libkonq.po.

Reproducible: Always

Steps to Reproduce:
Drag a file into Konsole window.

Actual Results:  
A menu appears with untranslated items.

Expected Results:  
Translated menu items.
Comment 1 Christoph Feck 2011-08-28 19:49:51 UTC
Needs to load the catalog.
Comment 2 Jekyll Wu 2011-08-29 01:59:53 UTC
Git commit 2822ca86eb77294a9d6dee564d24f643968021a6 by Jekyll Wu.
Committed on 29/08/2011 at 03:54.
Pushed by jekyllwu into branch 'master'.

Make sure the d&d popup menu provided by libkonq get translated.

This is a follow-up of 2dcd5842552684e558716d069b73dd118035b75d.

BUG: 280931

M  +4    -0    src/main.cpp

http://commits.kde.org/konsole/2822ca86eb77294a9d6dee564d24f643968021a6