Make sure the d&d popup menu provided by libkonq get translated.

This is a follow-up of 2dcd5842552684e558716d069b73dd118035b75d.

BUG: 280931